/* 
  Localizable.strings
  Prenom Africains

  Created by Otourou Da Costa on 29/05/2021.
  
*/
"hello-title" = "Hello, World!";
"short" = "short";
"medium" = "medium";
"long" = "long";
"Choose your language" = "Choose your language";
"Home" = "Home";
"Search" = "Search";
"My List" = "My List";
"Params" = "Params";
"Share" = "Share";
"Origins: %@" = "Origins: %@";
"Origins:" = "Origins:";
"Origins" = "Origins";
"Search a firstname" = "Search a firstname";
"Only show favorites" = "Only show favorites";
"Area" = "Area";
"Gender" = "Gender";
"Size" = "Size";
"Filter" = "Filter";
"filters on" = "filters on";
"north africa" = "north africa";
"east africa" = "east africa";
"west africa" = "west africa";
"south africa" = "south africa";
"northern africa" = "north africa";
"eastern africa" = "east africa";
"western africa" = "west africa";
"southern africa" = "south africa";
"No favorite firstname" = "No favorite firstname";
"right button" = "right button";
"left button" = "left button";
"Meaning" = "Meaning";
"More..." = "More...";
"More" = "More";
"Cancel" = "Cancel";

