...
                            .font(.system(size: 60 * CGFloat(sizeMultiplier())))
                            .minimumScaleFactor(0.2)
                            .lineLimit(1)
                            .frame(width: 250 * sizeMultiplier(), height: 140 * sizeMultiplier())
                            .offset(y: 40)
                            .shadow(color: Color.black.opacity(16.0), radius: 6, x: 5, y: 3)
                            .accessibility(label: Text("current firstname"))

                        Button(action: {
                            speakFirstname(firsnameStr: prenom.firstname)
                        }) {
                            LottieView(name: "sound", loopMode: .loop)
                                .frame(width: 54 * sizeMultiplier(), height: 54 * sizeMultiplier())
...
